# mp3lite

./: .gitignore  .gitmodules  README.md  mp3lite.c  mp3lite.h
docs/: bit_structure.md  naming_convention.md
huffman_tables/: README.md  csv_to_cstruct.py  huffman_tables.c  huffman_tables_1.csv  huffman_tables_10.csv  huffman_tables_11.csv  huffman_tables_12.csv  huffman_tables_13.csv  huffman_tables_15.csv  huffman_tables_16.csv  huffman_tables_2.csv  huffman_tables_24.csv  huffman_tables_3.csv  huffman_tables_5.csv  huffman_tables_6.csv  huffman_tables_7.csv  huffman_tables_8.csv  huffman_tables_9.csv  huffman_tables_a.csv  huffman_tables_b.csv  huffman_tables_csv_to_c.py
scalefactor_tables/: README.md  scalefactor_bands_csv_to_c.py  scalefactor_bands_long_block_32000hz.csv  scalefactor_bands_long_block_44100hz.csv  scalefactor_bands_long_block_48000hz.csv  scalefactor_bands_short_block_32000hz.csv  scalefactor_bands_short_block_44100hz.csv  scalefactor_bands_short_block_48000hz.csv  scalefactor_tables.c
tests/: CMakeLists.txt  README.md  test_exit_code.h  test_return_code.h
tests/unit_tests/: CMakeLists.txt  test_s_align_array.c  test_s_decode_frame_header.c  test_s_decode_frame_header_bitrate.c  test_s_decode_frame_header_freq.c  test_s_decode_frame_header_layer.c  test_s_decode_frame_header_ver.c  test_s_decode_side_info.c  test_s_decode_side_info_scfsi.c
