cmake_minimum_required(VERSION 3.14)
project(mp3lite_unit_tests C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED 99)

add_executable(test_s_align_array test_s_align_array.c)
add_test(unit_test_s_align_array test_s_align_array)

add_executable(test_s_decode_frame_header_layer test_s_decode_frame_header_layer.c)
add_test(unit_test_s_decode_frame_header_layer test_s_decode_frame_header_layer)

add_executable(test_s_decode_frame_header_bitrate test_s_decode_frame_header_bitrate.c)
add_test(unit_test_s_decode_frame_header_bitrate test_s_decode_frame_header_bitrate)

add_executable(test_s_decode_frame_header_freq test_s_decode_frame_header_freq.c)
add_test(unit_test_s_decode_frame_header_freq test_s_decode_frame_header_freq)

add_executable(test_s_decode_frame_header_ver test_s_decode_frame_header_ver.c)
add_test(unit_test_s_decode_frame_header_ver test_s_decode_frame_header_ver)

add_executable(test_s_decode_frame_header test_s_decode_frame_header.c)
add_test(unit_test_s_decode_frame_header test_s_decode_frame_header)

add_executable(test_s_decode_side_info test_s_decode_side_info.c)
add_test(unit_test_s_decode_side_info test_s_decode_side_info)